# beam_tracking_ric_xapp_skeleton

./: CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt
.claude/commands/: gen-rc-protos.md  plan-impl.md  wire-observation.md
.claude/skills/beam-tracking-ml/: SKILL.md
.claude/skills/ric-xapp-dev/: SKILL.md
beam_tracking/: config.py  schemas.py
beam_tracking/model/: inference.py  rsrp_student.py
beam_tracking/ric/: rc_grpc_client.py
beam_tracking/xapp/: action_dispatcher.py  action_dispatcher_rc.py  main.py  observation_provider.py  observation_provider_sim.py
configs/: ric.yaml  sim.yaml
docker/: Dockerfile  docker-compose.yml
docs/: 00_context.md  01_decision_matrix_rsrp_vs_csi.md  02_rl_architecture_from_pdf.md  03_kpm_reporting_period_notes.md  04_sionna_code_walkthrough.md  05_transcript_notes.md
resources/original/: 12月26日_13-39_transcript.txt  sionna_beam_tracking_v2.py
resources/sample/: observation_stream.jsonl
scripts/: bootstrap_external_repos.sh  gen_rc_protos.sh
tests/: test_policy_shapes.py  test_schema_validation.py
